@@ -1,3 +1,9 @@
+2010-06-14  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.Projects.Gui/CompletionListWindowTests.cs: Added
+	  unit test for 'Bug 613539 - DOBa does not complete to
+	  DynamicObjectBase'.
+
 2010-06-11  Michael Hutchinson  <mhutchinson@novell.com>
 
 	* Mono.TextEditor.Tests/ViTests.cs: Added vi key notation
